# molscreen

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  claude-progress.txt  docker-compose.yml  pyproject.toml  requirements.json
.github/workflows/: ci.yml  publish.yml
data/: bbbp_subset.csv  delaney_solubility.csv
molscreen/: __init__.py  admet.py  benchmark.py  cli.py  filters.py  io.py  models.py  properties.py  report.py  scaffold.py  similarity.py
molscreen/data/: delaney.csv
molscreen/templates/: report.html.j2
tests/: __init__.py  test_admet.py  test_benchmark.py  test_cli.py  test_filters.py  test_io.py  test_models.py  test_properties.py  test_report.py  test_scaffold.py  test_similarity.py
tests/fixtures/: invalid.smi  sample.csv  sample.sdf  sample.smi
