[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molscreen"
version = "0.1.0"
description = "SMILES-based drug candidate screening tool with RDKit + ML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Molscreen Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rdkit>=2023.3.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
molscreen = "molscreen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molscreen*"]

[tool.setuptools.package-data]
molscreen = ["templates/*.html", "data/*.pkl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
