[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molscreen"
version = "0.1.0"
description = "SMILES-based drug candidate screening tool with RDKit + ML"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Autonomous Agent", email = "agent@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdkit>=2023.9.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
report = [
    "plotly>=5.0.0",
]

[project.scripts]
molscreen = "molscreen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molscreen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
